Fixed color contrast 🎨

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,7 +10,7 @@ $orange: #d28445;
 $yellow: #f4bf75;
 $green: #90a959;
 $cyan: #75b5aa;
-$blue: #268bd2;
+$blue: #1779cf;
 $brown: #8f5536;
 $white-sand: #eee;
 
